resources/tcp-reset-service/tcp-reset-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpbin-vs
  namespace: demo
spec:
  hosts:
    - "httpbin.local"
  gateways:
    - httpbin-gateway
  http:
    - match:
      - uri:
          prefix: /
      retries:
        attempts: 3
        perTryTimeout: 5s
        retryOn: "5xx,gateway-error,connect-failure,refused-stream,reset"
      timeout: 20s
      route:
      - destination:
          host: tcp-reset-service.demo.svc.cluster.local
          port:
            number: 80
        weight: 100
